fix barArea width on mobile

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ li {
 .barArea {
     display: flex;
     justify-content: center;
-    padding: 0 50px;
+    padding: 0;
     gap: 20px;
     flex-wrap: wrap;
 }
